kubernetes-networks/canary/web-pods.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: web1
  labels:
    app: web1
spec:
  containers:
    - name: nginx
      imagePullPolicy: Always
      image: huntex/web:1
---
apiVersion: v1
kind: Pod
metadata:
  name: web2
  labels:
    app: web2
spec:
  containers:
    - name: nginx
      imagePullPolicy: Always
      image: huntex/web:2
