kubernetes-networks/canary/web-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service-1
spec:
  selector:
    app: web1
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: web-service-2
spec:
  selector:
    app: web2
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
